--- a/Portfolio/login.html
+++ b/Portfolio/login.html
@@ -18,7 +18,7 @@
     <section id="login" class="page-section">
       <div class="auth-body">
         <div class="login-image">
-          <img src="assets/login_pic3.svg" alt="" />
+          <img src="images/login_pic3.svg" alt="" />
         </div>
         <div class="line"></div>
         <div class="auth-container">
@@ -67,8 +67,9 @@
     body.append('action', 'login');
     body.append('data', JSON.stringify({ email, password }));
 
+    const API_URL = "https://lecturerporfolio.onrender.com/lecturer_api.py";
     try {
-      const response = await fetch('/cgi-bin/lecturer_api.py', {
+      const response = await fetch(API_URL, {
         method: 'POST',
         headers: { "Content-Type": "application/x-www-form-urlencoded" },
         body: body.toString()
