Fix image source path in signup.html

--- a/Portfolio/signup.html
+++ b/Portfolio/signup.html
@@ -17,7 +17,7 @@
     <section id="signup" class="page-section">
       <div class="auth-body">
         <div class="login-image">
-          <img src="assets/login_pic3.svg" alt="" />
+          <img src="images/login_pic3.svg" alt="" />
         </div>
         <div class="line"></div>
         <div class="auth-container">
@@ -70,8 +70,9 @@
         body.append('action', 'signup');
         body.append('data', JSON.stringify({ name, email, password }));
 
+        const API_URL = "https://lecturerporfolio.onrender.com/lecturer_api.py";
         try {
-          const response = await fetch('/cgi-bin/lecturer_api.py', {
+          const response = await fetch(API_URL, {
             method: 'POST',
             headers: { "Content-Type": "application/x-www-form-urlencoded" },
             body: body.toString()
