Fix HTML structure and update image source

--- a/Portfolio/login.html
+++ b/Portfolio/login.html
@@ -18,7 +18,7 @@
     <section id="login" class="page-section">
       <div class="auth-body">
         <div class="login-image">
-          <img src="images/login_pic3.svg" alt="" />
+          <img src="assets/login_pic3.svg" alt="" />
         </div>
         <div class="line"></div>
         <div class="auth-container">
@@ -113,3 +113,4 @@
    
   </body>
 </html>
+
