Fix image path and HTML encoding in signup page
Updated image source path and fixed HTML encoding.

--- a/Portfolio/signup.html
+++ b/Portfolio/signup.html
@@ -17,7 +17,7 @@
     <section id="signup" class="page-section">
       <div class="auth-body">
         <div class="login-image">
-          <img src="images/login_pic3.svg" alt="" />
+          <img src="assets/login_pic3.svg" alt="" />
         </div>
         <div class="line"></div>
         <div class="auth-container">
@@ -120,3 +120,4 @@
     </script>
   </body>
 </html>
+
